# eidetic_engine_cli

./: .bead-obsolescence-report.json  .bridge-staleness-report.json  .closure-lint-report.json  .closure-quality-report.json  .git_log_tmp.txt  .gitignore  .plan-drift-report.json  .rchignore  .tracing-field-report.json  .ubs_out.txt  .ubsignore  .verification-drift-report.json  .vision-coverage-report.json  AGENTS.md  CLAUDE.md  CLOSE_THE_GAP_PLAN.md  COMPREHENSIVE_PLAN_TO_MAKE_EE.md  COMPREHENSIVE_PLAN_TO_MAKE_EE__OPUS.md  Cargo.toml  GEMINI_PANE_REPORT.md  PUBLISH_CHECKLIST.md  README.md  clippy.toml  clippy_out_dump  deny.toml  how eidetic_engine_cli-lpb5  install.ps1  install.sh  rustfmt.toml
.beads/: .gitignore  config.yaml  deletions.jsonl  issues.jsonl
.stash_janitor_workspace/: bundle_path.txt  cleanup_authorization.txt  cleanup_log.tsv  handoff_report.md  head_phase0.txt  inventory.tsv  project_profile.json  triage.tsv  wt_phase0.txt
benches/: agent_profile.rs  audit_query.rs  budgets.toml  concurrent_writes.rs  context.rs  context_stream.rs  context_with_ppr.rs  curate_candidates.rs  graph_gomory_hu.rs  graph_hits.rs  graph_ktruss.rs  graph_louvain.rs  graph_minhash_rank.rs  graph_pagerank.rs  graph_ppr.rs  import_cass.rs  index_rebuild.rs  link.rs  outcome.rs  pack_size.rs  remember.rs  search.rs  status.rs  ulid_tiebreak.rs  why.rs  workspace_init.rs
docs/: agent-outcome-scenarios.md  agent_integration.md  agent_mail_fallback.md  boundary-migration-e2e-logging.md  bridge_execution_log.md  closure-dossier.md  command_classification.md  degraded_aggregation_emitter_inventory.md  degraded_code_taxonomy.md  degraded_codes.md  dependency-contract-matrix.md  dependency-research-notes.md  determinism_seed_labels.md  env_vars.md  feature_flag_registry.md  fixture-provenance-traceability.md  franken_publish_status.md  mechanical-boundary-command-inventory.md  migration-guide.md  migration_v0_1_to_v0_2.md  pack-replay.md  perf-forensics-cookbook.md  plan-sweep-report.md  profiles.md  query-schema.md  rch_runbook.md  rch_verification.md  redaction_levels.md  silent-fallback-inventory.md  swarm-scale-workloads.md  testing-strategy.md  toon-output.md  triad_compat_plan.md  trust-model.md  ux-style-guide.md  volatile_field_registry.md
fuzz/: Cargo.toml  Justfile  README.md
fuzz/corpus/cass_import_jsonl/: invalid_path.json  invalid_truncated.json  valid_sessions.json  valid_view.json
fuzz/corpus/eql_parser/: edge_large_arrays.json  invalid_confidence_order.json  invalid_extreme_limit.json  invalid_top_level_array.json  invalid_unknown_field.json  invalid_zero_limit.json  valid_full.json  valid_minimal.json  valid_query_alias_unicode.json
fuzz/corpus/jsonl_header/: malformed_header.jsonl
fuzz/corpus/jsonl_header_parser/: missing_schema  nested_header_shape  string_value  unclosed_json  unicode_schema  valid_header  whitespace  wrong_schema
fuzz/corpus/memory_id/: control_text  invalid_crockford  missing_separator  overlong_payload  payload_overflow  short_payload  unicode  valid_lowercase_payload  valid_nil  wrong_prefix_link  wrong_prefix_workspace
fuzz/corpus/pack_token_budget/: budget_four_thousand_mixed.json  budget_one.json  budget_ten_edges.json  budget_u32_max.json  duplicate_and_unicode.json  empty_query.json  whitespace_query.json  zero_budget_and_zero_tokens.json
fuzz/corpus/packing_budget/: dimension_order.json  huge_wall_duration.json  io_breach.json  memory_breach.json  real_context_budget.json  release_context_budget.json  tokens_breach.json  unbounded_max_usage.json  wall_clock_deadline.json  wall_clock_zero.json
fuzz/corpus/provenance_uri/: 06708fa74864074c  0f99017a5cff2241  102d2a822b379515  269c48cf34cc26ba  30df1de42645cf95  49389548ee84f9e3  613c99d4ce806d81  830efc076e2abf77  847a3356442fc90d  883242228eb7e970  a18ecc8a8bc5a98c  b79f89776c5de552  ff9e2024450204f7
fuzz/corpus/schema_version/: causal_catalog  certificate  economy_catalog  error  executable_id_catalog  future_recorder  future_response  invalid_empty_component  learning_catalog  mcp_manifest  no_prefix  procedure_catalog  response  rule_add  rule_list  rule_show  unicode_control  very_long
fuzz/corpus/search_query_parser/: dangling_backslash  dash_in_term  double_dash_term  embedded_quote_escape  escape_sequences  excluded_phrase  mixed_clauses  multiple_terms  quote_then_dash  quoted_phrase  unicode_term  unterminated_quote  whitespace_boundary
fuzz/corpus/tiktoken_counting/: 408f8d9176df78d3  a03c2aed529d1008  df9f81272c048e6e  e87afd9b7b3ac843
fuzz/corpus/trust_score/: 1094dc702f860fd1  68d193711df501c3  6b8e1a52dd8e9328  b577135114d7eb1c  b8339f62111232bf  cde85177907bca18  d24caf0486020809  e5cd8cfac2c3fc40
fuzz/fuzz_targets/: cass_import_jsonl.rs  degraded_aggregation.rs  eql_parser.rs  graph_audit.rs  graph_memory_budget.rs  graph_telemetry.rs  insights_json_decode.rs  insights_section_dispatch.rs  jsonl_header.rs  jsonl_header_parser.rs  memory_id.rs  pack_token_budget.rs  packing_budget.rs  ppr_weight_clamp.rs  provenance_uri.rs  proximity_arg_parser.rs  rule_provenance_ego.rs  schema_version.rs  search_query_parser.rs  tiktoken_counting.rs  trust_score.rs  witness_retention.rs
scripts/: agent_consume_pack.py  agent_consume_pack_test.py  audit_install_pipeline.sh  audit_randomness_sources.sh  bead-obsolescence.sh  bench.sh  bench_pack_regression.sh  bench_perf_regression.sh  bridge-staleness.sh  build_degraded_codes_doc.sh  check-forbidden-deps.sh  check-local-cargo-tripwire.sh  check-rch-doc-examples.py  check-rch-portability.sh  check-tracing-fields.sh  closeout_audit.sh  closure-lint.sh  e2e_advanced.sh  e2e_boundary_migration.sh  e2e_overhaul.sh  e2e_test.sh  e2e_windows_smoke.ps1  extract_bead_file_surfaces.sh  failure_mode_impact.sh  franken_publish_status.py  plan-drift.sh  rch_compile_blocker_router.py  rch_recover_verification.sh  rch_verify.sh  swarm_coordination_health.sh  sync_perf_table.sh  untracked-work-audit.sh  verification-drift-guard.sh  verify-budget.toml  verify.sh  vision-coverage.sh
skills/: README.md
src/: fuzz.rs  lib.rs  main.rs  (+4 more)
(+1776 files in other folders)
