[package]
name = "ee"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "MIT"
description = "Durable, local-first, explainable memory for coding agents."
repository = "https://github.com/Dicklesworthstone/eidetic_engine_cli"
homepage = "https://github.com/Dicklesworthstone/eidetic_engine_cli"
documentation = "https://docs.rs/ee"
readme = "README.md"
keywords = ["memory", "agents", "cli", "local-first", "search"]
categories = ["command-line-utilities", "database", "development-tools"]
default-run = "ee"
publish = false
exclude = [
    "tests/fixtures/*",
    "tests/golden/*",
    ".beads/*",
    "perf.data",
    "*.profraw",
]

[lib]
name = "ee"
path = "src/lib.rs"

[[bin]]
name = "ee"
path = "src/main.rs"

[features]
default = ["fts5", "json", "embed-fast", "lexical-bm25", "graph"]
fts5 = ["frankensearch/fts5"]
json = []
embed-fast = ["frankensearch/model2vec"]
# Blocked: frankensearch/fastembed currently pulls reqwest/tokio/hyper/tower.
# Do not expose an embed-quality feature until that tree is forbidden-dep clean.
lexical-bm25 = ["frankensearch/lexical"]
graph = []
mcp = []
serve = []
# Optional science analytics for evaluation and diagnostics (EE-171).
# Enables offline statistical metrics, clustering, and diagram exports.
science-analytics = []

[dependencies]
asupersync = { version = "0.3.1", default-features = false, features = ["tracing-integration"] }
base64 = { version = "0.22.1" }
blake3 = { version = "1.5" }
franken-agent-detection = { version = "0.1.3", path = "/data/projects/franken_agent_detection", default-features = false }
chrono = { version = "0.4.44", default-features = false, features = ["clock", "std"] }
clap = { version = "4.6.1", features = ["derive"] }
clap_complete = { version = "4.6.1" }
fnx-algorithms = { version = "0.1.0", path = "/data/projects/franken_networkx/crates/fnx-algorithms" }
fnx-classes = { version = "0.1.0", path = "/data/projects/franken_networkx/crates/fnx-classes" }
fnx-runtime = { version = "0.1.0", path = "/data/projects/franken_networkx/crates/fnx-runtime", default-features = false, features = ["asupersync-integration"] }
frankensearch = { version = "0.3.0", path = "/data/projects/frankensearch/frankensearch", default-features = false, features = ["hash", "storage"] }
getrandom = { version = "0.3.4" }
regex-lite = { version = "0.1" }
ring = { version = "0.17" }
rustix = { version = "1.1.4", features = ["fs", "process"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0.149" }
serde_yaml = { version = "0.9.34" }
sha2 = { version = "0.10.9" }
sqlmodel-core = { version = "0.2.2", path = "/data/projects/sqlmodel_rust/crates/sqlmodel-core" }
sqlmodel-frankensqlite = { version = "0.2.2", path = "/data/projects/sqlmodel_rust/crates/sqlmodel-frankensqlite" }
tempfile = { version = "3.27.0" }
# Real BPE tokenization for context pack budget enforcement
# (eidetic_engine_cli-aitk). Default features only; the `async-openai`
# feature would pull tokio/reqwest/hyper which are forbidden here.
tiktoken-rs = { version = "0.11.0", default-features = false }
toon = { package = "tru", version = "0.2.2", path = "/data/projects/toon_rust", default-features = false }
toml_edit = { version = "0.25.11", default-features = false, features = ["parse", "display"] }
tracing = { version = "0.1.44" }
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "json"] }
# NFC normalization for policy tag/secret detection (bd-17c65.3.3 / C3).
# Already in dep tree transitively; explicit dep documents the contract.
unicode-normalization = { version = "0.1" }
uuid = { version = "1", features = ["v7"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
insta = { version = "1.47.2", features = ["json"] }
proptest = { version = "1.9.0", default-features = false, features = ["std"] }

[[bench]]
name = "remember"
harness = false

[[bench]]
name = "search"
harness = false

[[bench]]
name = "why"
harness = false

[[bench]]
name = "outcome"
harness = false

[[bench]]
name = "context"
harness = false

[[bench]]
name = "status"
harness = false

[[bench]]
name = "import_cass"
harness = false

[[bench]]
name = "link"
harness = false

[[bench]]
name = "graph_pagerank"
harness = false

[[bench]]
name = "curate_candidates"
harness = false

[[test]]
name = "cass_contracts"
path = "tests/conformance/cass_contracts.rs"

[[test]]
name = "query_v1_matrix"
path = "tests/conformance/query_v1_matrix.rs"

[patch.crates-io]
asupersync = { path = "/data/projects/asupersync" }
fsqlite = { path = "/data/projects/frankensqlite/crates/fsqlite" }
fsqlite-core = { path = "/data/projects/frankensqlite/crates/fsqlite-core" }
fsqlite-error = { path = "/data/projects/frankensqlite/crates/fsqlite-error" }
fsqlite-types = { path = "/data/projects/frankensqlite/crates/fsqlite-types" }
fsqlite-func = { path = "/data/projects/frankensqlite/crates/fsqlite-func" }
fsqlite-ext-fts5 = { path = "/data/projects/frankensqlite/crates/fsqlite-ext-fts5" }
fsqlite-ext-json = { path = "/data/projects/frankensqlite/crates/fsqlite-ext-json" }
fsqlite-ast = { path = "/data/projects/frankensqlite/crates/fsqlite-ast" }
fsqlite-btree = { path = "/data/projects/frankensqlite/crates/fsqlite-btree" }
fsqlite-pager = { path = "/data/projects/frankensqlite/crates/fsqlite-pager" }
fsqlite-parser = { path = "/data/projects/frankensqlite/crates/fsqlite-parser" }
fsqlite-planner = { path = "/data/projects/frankensqlite/crates/fsqlite-planner" }
fsqlite-vdbe = { path = "/data/projects/frankensqlite/crates/fsqlite-vdbe" }
fsqlite-vfs = { path = "/data/projects/frankensqlite/crates/fsqlite-vfs" }
fsqlite-wal = { path = "/data/projects/frankensqlite/crates/fsqlite-wal" }
fsqlite-mvcc = { path = "/data/projects/frankensqlite/crates/fsqlite-mvcc" }
fsqlite-observability = { path = "/data/projects/frankensqlite/crates/fsqlite-observability" }
frankensearch = { path = "/data/projects/frankensearch/frankensearch" }
frankensearch-core = { path = "/data/projects/frankensearch/crates/frankensearch-core" }
frankensearch-embed = { path = "/data/projects/frankensearch/crates/frankensearch-embed" }
frankensearch-index = { path = "/data/projects/frankensearch/crates/frankensearch-index" }
frankensearch-lexical = { path = "/data/projects/frankensearch/crates/frankensearch-lexical" }
frankensearch-fusion = { path = "/data/projects/frankensearch/crates/frankensearch-fusion" }
frankensearch-rerank = { path = "/data/projects/frankensearch/crates/frankensearch-rerank" }
frankensearch-storage = { path = "/data/projects/frankensearch/crates/frankensearch-storage" }
frankensearch-durability = { path = "/data/projects/frankensearch/crates/frankensearch-durability" }
fnx-runtime = { path = "/data/projects/franken_networkx/crates/fnx-runtime" }
fnx-classes = { path = "/data/projects/franken_networkx/crates/fnx-classes" }
fnx-algorithms = { path = "/data/projects/franken_networkx/crates/fnx-algorithms" }
fnx-views = { path = "/data/projects/franken_networkx/crates/fnx-views" }
fnx-dispatch = { path = "/data/projects/franken_networkx/crates/fnx-dispatch" }
fnx-convert = { path = "/data/projects/franken_networkx/crates/fnx-convert" }
fnx-generators = { path = "/data/projects/franken_networkx/crates/fnx-generators" }

# Lint Policy (EE-002)
# CI runs: cargo clippy --all-targets -- -D warnings
# See AGENTS.md for rationale.

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
# Core safety lints - discourage panic paths in library code
dbg_macro = "warn"
todo = "warn"
unwrap_used = "warn"
expect_used = "warn"

# Tests may use #[allow(clippy::unwrap_used)] or #[allow(clippy::expect_used)]
# when the context makes the assertion obvious
