[package]
name = "ee-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
ee = { path = ".." }
libfuzzer-sys = "0.4"
serde_json = "1.0.149"

[[bin]]
name = "jsonl_header"
path = "fuzz_targets/jsonl_header.rs"
test = false
doc = false
bench = false

[[bin]]
name = "jsonl_header_parser"
path = "fuzz_targets/jsonl_header_parser.rs"
test = false
doc = false
bench = false

[[bin]]
name = "eql_parser"
path = "fuzz_targets/eql_parser.rs"
test = false
doc = false
bench = false

[[bin]]
name = "pack_token_budget"
path = "fuzz_targets/pack_token_budget.rs"
test = false
doc = false
bench = false

[[bin]]
name = "packing_budget"
path = "fuzz_targets/packing_budget.rs"
test = false
doc = false
bench = false

[[bin]]
name = "memory_id"
path = "fuzz_targets/memory_id.rs"
test = false
doc = false
bench = false

[[bin]]
name = "cass_import_jsonl"
path = "fuzz_targets/cass_import_jsonl.rs"
test = false
doc = false
bench = false

[[bin]]
name = "schema_version"
path = "fuzz_targets/schema_version.rs"
test = false
doc = false
bench = false

[[bin]]
name = "search_query_parser"
path = "fuzz_targets/search_query_parser.rs"
test = false
doc = false
bench = false

[[bin]]
name = "provenance_uri"
path = "fuzz_targets/provenance_uri.rs"
test = false
doc = false
bench = false

[[bin]]
name = "tiktoken_counting"
path = "fuzz_targets/tiktoken_counting.rs"
test = false
doc = false
bench = false

[[bin]]
name = "trust_score"
path = "fuzz_targets/trust_score.rs"
test = false
doc = false
bench = false

[[bin]]
name = "degraded_aggregation"
path = "fuzz_targets/degraded_aggregation.rs"
test = false
doc = false
bench = false

[[bin]]
name = "witness_retention"
path = "fuzz_targets/witness_retention.rs"
test = false
doc = false
bench = false

[[bin]]
name = "graph_memory_budget"
path = "fuzz_targets/graph_memory_budget.rs"
test = false
doc = false
bench = false

[[bin]]
name = "insights_section_dispatch"
path = "fuzz_targets/insights_section_dispatch.rs"
test = false
doc = false
bench = false

[[bin]]
name = "proximity_arg_parser"
path = "fuzz_targets/proximity_arg_parser.rs"
test = false
doc = false
bench = false

[[bin]]
name = "ppr_weight_clamp"
path = "fuzz_targets/ppr_weight_clamp.rs"
test = false
doc = false
bench = false

[[bin]]
name = "insights_json_decode"
path = "fuzz_targets/insights_json_decode.rs"
test = false
doc = false
bench = false

[patch.crates-io]
asupersync = { path = "/data/projects/asupersync" }
fsqlite = { path = "/data/projects/frankensqlite/crates/fsqlite" }
fsqlite-core = { path = "/data/projects/frankensqlite/crates/fsqlite-core" }
fsqlite-error = { path = "/data/projects/frankensqlite/crates/fsqlite-error" }
fsqlite-types = { path = "/data/projects/frankensqlite/crates/fsqlite-types" }
fsqlite-func = { path = "/data/projects/frankensqlite/crates/fsqlite-func" }
fsqlite-ext-fts5 = { path = "/data/projects/frankensqlite/crates/fsqlite-ext-fts5" }
fsqlite-ext-json = { path = "/data/projects/frankensqlite/crates/fsqlite-ext-json" }
fsqlite-ast = { path = "/data/projects/frankensqlite/crates/fsqlite-ast" }
fsqlite-btree = { path = "/data/projects/frankensqlite/crates/fsqlite-btree" }
fsqlite-pager = { path = "/data/projects/frankensqlite/crates/fsqlite-pager" }
fsqlite-parser = { path = "/data/projects/frankensqlite/crates/fsqlite-parser" }
fsqlite-planner = { path = "/data/projects/frankensqlite/crates/fsqlite-planner" }
fsqlite-vdbe = { path = "/data/projects/frankensqlite/crates/fsqlite-vdbe" }
fsqlite-vfs = { path = "/data/projects/frankensqlite/crates/fsqlite-vfs" }
fsqlite-wal = { path = "/data/projects/frankensqlite/crates/fsqlite-wal" }
fsqlite-mvcc = { path = "/data/projects/frankensqlite/crates/fsqlite-mvcc" }
fsqlite-observability = { path = "/data/projects/frankensqlite/crates/fsqlite-observability" }
frankensearch = { path = "/data/projects/frankensearch/frankensearch" }
frankensearch-core = { path = "/data/projects/frankensearch/crates/frankensearch-core" }
frankensearch-embed = { path = "/data/projects/frankensearch/crates/frankensearch-embed" }
frankensearch-index = { path = "/data/projects/frankensearch/crates/frankensearch-index" }
frankensearch-lexical = { path = "/data/projects/frankensearch/crates/frankensearch-lexical" }
frankensearch-fusion = { path = "/data/projects/frankensearch/crates/frankensearch-fusion" }
frankensearch-rerank = { path = "/data/projects/frankensearch/crates/frankensearch-rerank" }
frankensearch-storage = { path = "/data/projects/frankensearch/crates/frankensearch-storage" }
frankensearch-durability = { path = "/data/projects/frankensearch/crates/frankensearch-durability" }
fnx-runtime = { path = "/data/projects/franken_networkx/crates/fnx-runtime" }
fnx-classes = { path = "/data/projects/franken_networkx/crates/fnx-classes" }
fnx-algorithms = { path = "/data/projects/franken_networkx/crates/fnx-algorithms" }
fnx-views = { path = "/data/projects/franken_networkx/crates/fnx-views" }
fnx-dispatch = { path = "/data/projects/franken_networkx/crates/fnx-dispatch" }
fnx-convert = { path = "/data/projects/franken_networkx/crates/fnx-convert" }
fnx-generators = { path = "/data/projects/franken_networkx/crates/fnx-generators" }
